package prototype.jochem.triptop.domain;

public enum Transport {
    HUURAUTO,
    VLIEGTUIG,
    TREIN,
    BUS
}
