@startuml
title C4 Class Diagram: Alternatieve bouwstenen aanbieden

'hide circle
skinparam linetype ortho

top to bottom direction

package "controller" {
    class JourneyController {
        +getJourneys(origin: String, destination: String, departureDate: Date, returnDate: Date, price: double, transport: Transport): List<Journey>
    }
}

package "service" {
    interface JourneyService {
        +setJourneyStrategy(tripStrategy: String)
        +getJourneys(origin: String, destination: String, departureDate: Date, returnDate: Date, price: double, transport: Transport): List<Journey>
    }

    class JourneyServiceImpl {
        +setJourneyStrategy(tripStrategy: String)
        +getJourneys(origin: String, destination: String, departureDate: Date, returnDate: Date, price: double, transport: Transport): List<Journey>
    }
}

package "tripStrategy" {
    interface JourneyStrategy {
        +getJourneys(origin: String, destination: String, departureDate: Date, returnDate: Date, price: double, transport: Transport): List<Journey>
    }

    class StandardJourneyStrategy {
        +getJourneys(origin: String, destination: String, departureDate: Date, returnDate: Date, price: double, transport: Transport): List<Journey>
    }

    class AlternativeJourneyStrategy {
        +getJourneys(origin: String, destination: String, departureDate: Date, returnDate: Date, price: double, transport: Transport): List<Journey>
        +getJourneysFromTransportType(response: String, transport: Transport, journeys: List<Journey>): void
    }

    enum Transport {
        HUURAUTO, VLIEGTUIG, TREIN, BUS, TAXI
    }
}

package "domain" {
    class Journey {
        +origin: String
        +destination: String
        +departureDate: Date
        +returnDate: Date
        +price: double
        +transport: Transport
    }
}

package "api" {
    interface ExternalAPIHandler {
        +getTaxiTrips(location: String): String
        +getFlightTrips(location: String): String
        +getCarRentalTrips(location: String): String
    }

    class ExternalAPIHandlerImpl {
        +getTaxiTrips(location: String): String
        +getFlightTrips(location: String): String
        +getCarRentalTrips(location: String): String
    }
}

StandardJourneyStrategy .u.|> JourneyStrategy
AlternativeJourneyStrategy .u.|> JourneyStrategy
StandardJourneyStrategy .l.> "transport 1" Transport
AlternativeJourneyStrategy .l.> "transport 1..*" Transport

JourneyServiceImpl --> "journeyStrategy 1" JourneyStrategy

JourneyController --> "journeyService 1" JourneyService
JourneyServiceImpl .u.|> JourneyService
ExternalAPIHandlerImpl .u.|> ExternalAPIHandler

StandardJourneyStrategy --> "externalAPIHandler 1" ExternalAPIHandler
AlternativeJourneyStrategy --> "externalAPIHandler 1" ExternalAPIHandler
@enduml
